--- a/code/pyproject.toml
+++ b/code/pyproject.toml
@@ -1,46 +1,53 @@
-[tool.poetry]
+[project]
 name = "kairos"
 version = "0.1.0"
 description = ""
-authors = ["Maciej Rapacz <mrapacz@agh.edu.pl>"]
+authors = [{ name = "Maciej Rapacz", email = "mrapacz@agh.edu.pl" }]
+requires-python = "~=3.11"
 readme = "README.md"
-packages = [
-    { include = "kairos", from = "." },
+dependencies = [
+    "torch==2.2.2",
+    "datasets>=3.0.2,<4",
+    "evaluate>=0.4.3,<0.5",
+    "transformers==4.31.0",
+    "levenshtein>=0.26.1,<0.27",
+    "loguru>=0.7.2,<0.8",
+    "more-itertools>=10.5.0,<11",
+    "neptune>=1.12.0,<2",
+    "tensorboard>=2.18.0,<3",
+    "typer>=0.12.5,<0.13",
+    "numpy<2",
+    "sentencepiece>=0.2.0,<0.3",
+    "sacrebleu>=2.4.3,<3",
+    "rouge-score>=0.1.2,<0.2",
+    "prettytable>=3.12.0,<4",
 ]
 
-[tool.poetry.dependencies]
-python = "^3.11"
-torch = "2.2.2"
-datasets = "^3.0.2"
-evaluate = "^0.4.3"
-transformers = "4.31.0"  # double check before you upgrade this - at 4.46.0 it breaks morph training
-levenshtein = "^0.26.1"
-loguru = "^0.7.2"
-more-itertools = "^10.5.0"
-neptune = "^1.12.0"
-tensorboard = "^2.18.0"
-typer = "^0.12.5"
-numpy = "<2"
-sentencepiece = "^0.2.0"
-sacrebleu = "^2.4.3"
-rouge-score = "^0.1.2"
-prettytable = "^3.12.0"
+[project.scripts]
+train-kairos = "kairos.main:main"
 
+[dependency-groups]
+dev = [
+    "pre-commit>=4.0.1,<5",
+    "ruff>=0.7.1,<0.8",
+    "mypy>=1.13.0,<2",
+    "pytest>=8.3.3,<9",
+    "ipython>=8.29.0,<9",
+    "jupyterlab>=4.2.5,<5",
+    "seaborn>=0.13.2,<0.14",
+    "matplotlib>=3.9.2,<4",
+    "ipdb>=0.13.13,<0.14",
+]
 
-[tool.poetry.group.dev.dependencies]
-pre-commit = "^4.0.1"
-ruff = "^0.7.1"
-mypy = "^1.13.0"
-pytest = "^8.3.3"
-ipython = "^8.29.0"
-jupyterlab = "^4.2.5"
-seaborn = "^0.13.2"
-matplotlib = "^3.9.2"
-ipdb = "^0.13.13"
+[tool.hatch.build.targets.sdist]
+include = ["./kairos"]
+
+[tool.hatch.build.targets.wheel]
+include = ["./kairos"]
+
+[tool.hatch.build.targets.wheel.sources]
+"./kairos" = "kairos"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.scripts]
-train-kairos = "kairos.main:main"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
