--- a/morpht5/pyproject.toml
+++ b/morpht5/pyproject.toml
@@ -1,21 +1,23 @@
-[tool.poetry]
+[project]
 name = "morpht5"
 version = "0.2.2"
 description = "A morphologically aware version of T5 model."
-authors = ["Maciej Rapacz <mrapacz@agh.edu.pl>"]
-license = "MIT"
+authors = [{ name = "Maciej Rapacz", email = "mrapacz@agh.edu.pl" }]
+requires-python = "~=3.11"
 readme = "README.md"
+license = "MIT"
+dependencies = [
+    "transformers>=4,<5",
+    "torch>=2,<3",
+]
 
-[tool.poetry.dependencies]
-python = "^3.11"
-transformers = "^4"
-torch = "^2"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.3.4"
-ipdb = "^0.13.13"
-ipython = "^8.32.0"
+[dependency-groups]
+dev = [
+    "pytest>=8.3.4,<9",
+    "ipdb>=0.13.13,<0.14",
+    "ipython>=8.32.0,<9",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
